# SocialSystemArena

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_zh.md  pyproject.toml  ~$SocialSystemArena_present_en.pptx
docs/: MAS_Governance_Engine_详细文档.md  MAS_架构模式报告_修正版.md  SocialSystemArena_present_en.pptx  SocialSystemArena_present_zh.pptx  analysis.md  antipatterns.md  architecture.md  blockers.md  category.md  clawebench_runbook.md  conventions.md  decisions.md  multiagentbench_runbook.md  overview.md  pinchbench_runbook.md  progress.md  quality.md  security.md  wisdom.md
dsl/: governance_schema.cue
issue_test/: README.md
mas_engine/: __init__.py  cli.py  dashboard_server.py
scripts/: build_context.py  deliver_pr.sh  run_claw.sh  run_issue_tests.sh  run_mab.sh  run_pinch.sh  submit_pinch_sequential.sh
systems/: athens_democracy.yaml  edo_cluster.json  egypt_pipeline.json  egypt_pipeline.yaml  institutions.yaml  mongol_empire.yaml  qinhan_junxian.yaml  tang_sanshengliubu.cue  tang_sanshengliubu.json  (+3 more)
traces/benchmarks/gemini_2.5_flash/pinchbench/athens_democracy/20260327T085945Z/workspaces/task_11_clawdhub/run_01/: README.md  pyproject.toml
traces/benchmarks/gemini_2.5_flash/pinchbench/athens_democracy/20260327T085945Z/workspaces/task_11_clawdhub/run_01/src/datautils/: __init__.py
traces/benchmarks/gemini_2.5_flash/pinchbench/athens_democracy/20260327T085945Z/workspaces/task_11_clawdhub/run_01/tests/: test_datautils.py
traces/benchmarks/gemini_2.5_flash/pinchbench/us_federal/20260328T111106Z/workspaces/task_11_clawdhub/run_01/: README.md  pyproject.toml
traces/benchmarks/gemini_2.5_flash/pinchbench/us_federal/20260328T111106Z/workspaces/task_11_clawdhub/run_01/src/datautils/: __init__.py
traces/benchmarks/gemini_2.5_flash/pinchbench/us_federal/20260328T111106Z/workspaces/task_11_clawdhub/run_01/tests/: test_datautils.py
traces/benchmarks/pinch_test_latest/qinhan_junxian/20260315T101029Z/workspaces/task_11_clawdhub/run_01/: pyproject.toml
traces/benchmarks/pinch_test_latest/qinhan_junxian/20260315T101029Z/workspaces/task_11_clawdhub/run_01/tests/: test_datautils.py
(+3960 files in other folders)
