[project]
name = "datautils"
version = "0.1.0"
description = "A utility library for data manipulation and processing."
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [] # Add your project dependencies here

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
