[project]
name = "datautils"
version = "0.1.0"
description = "A utility library for data manipulation."
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.8"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
